...

struct AnimatedImageLoader: UIViewRepresentable {
    let imageURL: URL

    func makeUIView(context: Context) -> UIView {
        let container = UIView()
        container.accessibilityIdentifier = "gifContainer"

        // add activity indicator to the container
        let activityIndicator = UIActivityIndicatorView(style: .medium)
        activityIndicator.translatesAutoresizingMaskIntoConstraints = false
        activityIndicator.startAnimating()
        container.addSubview(activityIndicator)
...
