...
                    HStack {
                        VStack {
                            if let url = URL(string: details.images.original.url) {
                                AnimatedImageLoader(
                                    imageURL: url
                                )
                                .accessibilityIdentifier("selectedGif")
                                .aspectRatio(1, contentMode: .fit)
                            } else {
                                Text("Invalid Image URL")
                            }
                        }
                        VStack {
...
